--- a/Ass 1/Gyu Don.html
+++ b/Ass 1/Gyu Don.html
@@ -1,16 +1,21 @@
+<!-- Name:Tong-Chang Wu ID: 213288591  -->
+<!--http://ma17852003.github.io/Ass1/-->
 <!DOCTYPE html>
-<!-- saved from url=(0042)http://allanng78.github.io/restaurant.html -->
-<html class="ui-mobile"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><!--<base href="http://allanng78.github.io/restaurant.html">--><base href="."> 
-	<meta charset="UTF-8">
-	<title>Restaurant Picker</title> 
+<html class="ui-mobile landscape min-width-320px min-width-480px min-width-768px min-width-1024px">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><base href=".">
+<title>James's Japanese Restaurant</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.css" />
+
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.css" />
        
      <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
      <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js">
      </script>
-</head> 
-<body> 
+</head>
+
+
+<body class="ui-mobile-viewport">  
 <div id="home" data-role="page">
 	
 	<div data-role="header" class="ui-header ui-bar-a" role="banner"> 
