--- a/Ass 1/Feedback.html
+++ b/Ass 1/Feedback.html
@@ -1,17 +1,21 @@
+<!-- Name:Tong-Chang Wu ID: 213288591  -->
+<!--http://ma17852003.github.io/Ass1/-->
 <!DOCTYPE html>
-<html>
-     <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Feedback</title>
+<html class="ui-mobile landscape min-width-320px min-width-480px min-width-768px min-width-1024px">
+    <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><base href=".">
+<title>James's Japanese Restaurant </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.css" />
        
      <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
      <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js">
      </script>
 </head>
-</head>
 
-<body>
+
+<body class="ui-mobile-viewport">  
 <div id="home" data-role="page">
   <div data-role="header" data-position="fixed">
     <h3>Feedback</h3>
@@ -37,7 +41,7 @@
       <label>Feedback:</label>
       <input type="text">
     </div>
-    <a href="#" class="ui-btn">Submit</a>
+    <a class="ui-btn ui-btn-active ui-btn-up-undefined" onclick="alert(&#39;Submit success!&#39;)">Submit</a>
   </div>
 </div>
 </body>
