--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+<!-- Name:Tong-Chang Wu ID: 213288591  -->
+<!--http://ma17852003.github.io/Ass1/-->
 <!DOCTYPE html>
-<html>
+<html class="ui-mobile landscape min-width-320px min-width-480px min-width-768px min-width-1024px">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><base href=".">
 <title>James's Japanese Restaurant </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.css" />
        
      <script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
@@ -10,7 +14,8 @@
      </script>
 </head>
 
-<body>
+
+<body class="ui-mobile-viewport">  
 	
 	<div data-role="page" id="page1">
     <div data-role="header">
