--- a/Ass 1/About.html
+++ b/Ass 1/About.html
@@ -16,11 +16,13 @@
 
 <body class="ui-mobile-viewport">  
 <div id="home" data-role="page">
-	
+		<!-- Input the header information of the page -->
+
 	<div data-role="header" class="ui-header ui-bar-a" role="banner"> 
 		<h1 class="ui-title" tabindex="0" role="heading" aria-level="1"> About</h1>
 	</div> 
-	
+			<!-- Input the content of the page -->
+
 	<div data-role="content" class="ui-content" role="main">
 	<div class="ui-grid-a" id="restau_infos">	
 		<div class="ui-block-a">
@@ -33,6 +35,7 @@
 
 			</ul>			
 		</div>		
+                  <!-- Input image source at the block section b-->
 		<div class="ui-block-b">
 		<p><img src="IMAG2195.jpg" alt="photo" width="159" height="242" ></p>
 
