--- a/Ass 1/Gyu Don.html
+++ b/Ass 1/Gyu Don.html
@@ -14,14 +14,17 @@
      </script>
 </head>
 
+<!-- adapt mobile size-->
 
 <body class="ui-mobile-viewport">  
 <div id="home" data-role="page">
-	
+			<!-- Input the header information of the page -->
+
 	<div data-role="header" class="ui-header ui-bar-a" role="banner"> 
 		<h1 class="ui-title" tabindex="0" role="heading" aria-level="1"> Gyu Don</h1>
 	</div> 
-	
+					<!-- Input the content of the page -->
+
 	<div data-role="content" class="ui-content" role="main">
 	<div class="ui-grid-a" id="restau_infos">	
 		<div class="ui-block-a">
@@ -33,7 +36,8 @@
                 <li> 1000g</li>
 
 			</ul>			
-		</div>		
+		</div>		            
+        <!-- Input image sources at the block section b-->
 		<div class="ui-block-b">
 		<p><img src="images (1).jpg" alt="photo" width="259" height="242" ></p>
         <p><img src="gyu don.jpg" alt="photo" width="209" height="242" ></p>
