--- a/Ass 1/Menu.html
+++ b/Ass 1/Menu.html
@@ -14,14 +14,16 @@
      </script>
 </head>
 
-
+<!-- adapt mobile size-->
 <body class="ui-mobile-viewport">  
 <div data-role="page" id="page1">
+	<!-- Input the header information of the page -->
     <div data-role="header">
     <h1>Menu</h1>
     </div>
-
+	<!-- Input the content of the page -->
     <div class="content" data-role="content">
+             <!-- Input image sources on list view-->
 
      <ul data-role="listview">  
      <li><a href="#Sushi.html">
