--- a/Ass 1/Sushi.html
+++ b/Ass 1/Sushi.html
@@ -14,13 +14,15 @@
      </script>
 </head>
 
+<!-- adapt mobile size-->
 <body class="ui-mobile-viewport">  
 <div id="home" data-role="page">
-	
+	<!-- Input the header information of the page -->
 	<div data-role="header" class="ui-header ui-bar-a" role="banner"> 
 		<h1 class="ui-title" tabindex="0" role="heading" aria-level="1"> SuShi</h1>
 	</div> 
-	
+		<!-- Input the content of the page -->
+
 	<div data-role="content" class="ui-content" role="main">
 	<div class="ui-grid-a" id="restau_infos">	
 		<div class="ui-block-a">
@@ -34,7 +36,8 @@
 
 			</ul>			
 		</div>		
-		<div class="ui-block-b">
+                  <!-- Input image sources at the block section b-->
+<!-- -->		<div class="ui-block-b">
 		<p><img src="pic2.jpg" alt="photo" width="209" height="242" ></p>
         <p><img src="pic4.jpg" alt="photo" width="209" height="242" ></p>
 
