--- a/Ass 1/index.html
+++ b/Ass 1/index.html
@@ -14,15 +14,19 @@
      </script>
 </head>
 
+<!-- adapt mobile size-->
 
 <body class="ui-mobile-viewport">  
-	
-	<div data-role="page" id="page1">
+		<div data-role="page" id="page1">
+    		<!-- Input the header information of the page -->
+
     <div data-role="header">
     <h1>James's Japenese Restaurant</h1>
     </div>
-    <div class="content" data-role="content">
+      				<!-- Input the content of the page -->
 
+    <div class="content" data-role="content">
+<!-- listview hrefs -->
      <ul data-role="listview">  
      <li><a href="#Menu.html">Menu</a></li>  
      <li><a href="#Location.html">Location</a></li>  
@@ -32,6 +36,8 @@
  
  
      </ul> 
+             <!-- Input image sources-->
+
     <img style="width:40%;" src="pic1.jpg" >
      <img style="width:40%;"src="pic3.jpg" >
     <img style="width:40%;" src="pic4.jpg" >
