--- a/Ass 1/Curry Chicken.html
+++ b/Ass 1/Curry Chicken.html
@@ -13,14 +13,17 @@
      <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js">
      </script>
 </head>
+<!-- adapt mobile size-->
 
 <body class="ui-mobile-viewport">  
 <div id="home" data-role="page">
+		<!-- Input the header information of the page -->
 	
 	<div data-role="header" class="ui-header ui-bar-a" role="banner"> 
 		<h1 class="ui-title" tabindex="0" role="heading" aria-level="1"> Curry Chicken</h1>
 	</div> 
-	
+				<!-- Input the content of the page -->
+
 	<div data-role="content" class="ui-content" role="main">
 	<div class="ui-grid-a" id="restau_infos">	
 		<div class="ui-block-a">
@@ -33,7 +36,9 @@
                 <li> 1200g</li>
 
 			</ul>			
-		</div>		
+		</div>	
+            <!-- Input image sources at the block section b-->
+	
 		<div class="ui-block-b">
 		<p><img src="images.jpg" alt="photo" width="209" height="242" ></p>
         <p><img src="curry chicken.jpg" alt="photo" width="209" height="242" ></p>
