--- a/Ass 1/Feedback.html
+++ b/Ass 1/Feedback.html
@@ -14,13 +14,17 @@
      </script>
 </head>
 
+<!-- adapt mobile size-->
 
 <body class="ui-mobile-viewport">  
+		<!-- Input the header information of the page -->
 <div id="home" data-role="page">
   <div data-role="header" data-position="fixed">
     <h3>Feedback</h3>
   </div>
+  				<!-- Input the content of the page -->
   <div role="main" class="ui-content">
+  <!-- text input buttton-->
     <div class="ui-field-contain">
       <label>Customer Name:</label>
       <input type="text">
@@ -41,6 +45,7 @@
       <label>Feedback:</label>
       <input type="text">
     </div>
+    <!-- A submit button -->
     <a class="ui-btn ui-btn-active ui-btn-up-undefined" onclick="alert(&#39;Submit success!&#39;)">Submit</a>
   </div>
 </div>
