--- a/Ass 1/About.html
+++ b/Ass 1/About.html
@@ -13,7 +13,7 @@
      <script src="http://code.jquery.com/mobile/1.0a4.1/jquery.mobile-1.0a4.1.min.js">
      </script>
 </head>
-
+<!-- adapt mobile size-->
 <body class="ui-mobile-viewport">  
 <div id="home" data-role="page">
 		<!-- Input the header information of the page -->
